<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonFinishedTasks"
        app:layout_constraintTop_toTopOf="parent"></FrameLayout>

    <Button
        android:id="@+id/buttonCurrentTasks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="onClickButtonCurrentTasks"
        android:text="@string/current_tasks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonNewTask"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonNewTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/new_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onClickButtonNewTask"/>

    <Button
        android:id="@+id/buttonFinishedTasks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/finished_tasks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonNewTask"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="onClickButtonFinishedTasks"/>


</androidx.constraintlayout.widget.ConstraintLayout>